[project]
name = "triton_kernels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "cmake==3.31.4",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "filelock==3.17.0",
    "fonttools==4.56.0",
    "fsspec==2025.2.0",
    "hf-transfer==0.1.9",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jinja2==3.1.5",
    "kiwisolver==1.4.7",
    "line-profiler==4.2.0",
    "llvmlite==0.43.0",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numba==0.60.0",
    "numpy==2.0.2",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.2",
    "scipy==1.13.1",
    "six==1.17.0",
    "snakeviz==2.2.2",
    "sympy==1.13.1",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "transformers==4.48.3",
    "triton==3.2.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "zipp==3.21.0",
]

[tool.uv.workspace]
members = ["triton-kernels"]
